--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-flaskr/static/autocomplete_memory.xlsx
+*.xlsx
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
+*.pdf
+receipts
