display recommended topics

--- a/flaskr/static/price_mapping.json
+++ b/flaskr/static/price_mapping.json
@@ -1,27 +1,27 @@
 {
-    "Pepperoni": 1,
-    "Margherita" : 1.5,
-    "White Pizza": 1,
-    "Caesar Salad Pizza": 2.5,
-    "Venetian Rolled": 2,
-    "Pizza Pockets": 1.3,
-    "Calzone": 1.5,
-    "Griddled California Pizzas": 2.4,
-    "Bruscheta Pizzaiola": 2.1,
-    "Breakfast Pizza": 1.5,
-    "Gluten-free Mushroom": 1.6,
-    "Wingless Buffalo Chicken": 2 ,
+    "pepperoni": 1,
+    "margherita" : 1.5,
+    "white Pizza": 1,
+    "caesar Salad Pizza": 2.5,
+    "venetian Rolled": 2,
+    "pizza Pockets": 1.3,
+    "calzone": 1.5,
+    "griddled California Pizzas": 2.4,
+    "bruscheta Pizzaiola": 2.1,
+    "breakfast Pizza": 1.5,
+    "gluten-free Mushroom": 1.6,
+    "wingless Buffalo Chicken": 2 ,
     
-    "Big Mac": 2.5,
-    "Quarter Pounder": 2,
-    "Cheeseburger": 1.5,
-    "Hamburger": 1.3,
+    "big Mac": 2.5,
+    "quarter Pounder": 2,
+    "cheeseburger": 1.5,
+    "hamburger": 1.3,
 
-    "Bacon Ranch Salad": 3,
-    "Side Salad": 2.7,
-    "Coca-Cola": 1,
-    "Sprite": 1,
-    "Fanta": 1,
-    "Orange": 1.2,
-    "Dasani water": 0.6
+    "bacon Ranch Salad": 3,
+    "side Salad": 2.7,
+    "coca-Cola": 1,
+    "sprite": 1,
+    "fanta": 1,
+    "orange": 1.2,
+    "dasani water": 0.6
 }
