added matching intent with product info retrieval

--- a/flaskr/static/config.json
+++ b/flaskr/static/config.json
@@ -1,3 +1,4 @@
 {
-    "autocomplete_memory_path" : "flaskr/static/autocomplete_memory.xlsx"
+    "autocomplete_memory_path" : "flaskr/static/autocomplete_memory.xlsx",
+    "extracted_products_path" : "flaskr/static/extracted_products.xlsx"
 }
