--- a/flaskr/static/domain_knowledge.json
+++ b/flaskr/static/domain_knowledge.json
@@ -1,15 +1,10 @@
-{
-     "water" : "Dasani water ",
-     "one water" : "Dasani water ",
-     "would like one water please" : "Dasani water",
-    
+{     
      "what products do you offer?" : "We offer pizzas, burgers, salads and cold drinks.",
      "" : "Please provide a request!",
      "what burgers do you offer?" : "We offer Big Mac, Quarter Pounder with Cheese, Cheeseburger and Hamburger",
      "what salads do you offer?" : "Bacon Ranch Salad and Side Salad",
      "what cold drinks do you offer?" : "We offer Coca-Cola, Sprite, Fanta Orange and DASANI Water",
      "do you have any sausages avaliable?" : "We do have, ketchup, garlic sausage and mustard!",
-
      "what pizzas do you offer?" : "We offer: Margherita Pizza, White Pizza, Caesar Salad Pizza, Waffled Margherita Pizza, Venetian Rolled Pizza, Pizza Pockets, Calzone Pizza, Griddled California pizzas, Bruschetta Pizzaiola, Breakfast Pizza, Gluten-Free Mushroom Pizza, Wingless Buffalo Chicken Pizza and Basic Pepperoni Pizza",
 
      "pepperoni please" : "Pizza Pepperoni",
@@ -37,5 +32,8 @@
      "sprite please" : "Sprite",
      "fanta please" : "Fanta",
      "orange please" : "Orange ",
-     "dasani water please" : "Dasani water"
+     "dasani water please" : "Dasani water",
+     "water" : "Dasani water ",
+     "one water" : "Dasani water ",
+     "would like one water please" : "Dasani water"
 }
